syntax = "proto3";

package domain.v1;
option go_package = "internal/domain/pb";

import "google/protobuf/empty.proto";
import "domain/v1/model.proto";

service DomainService {
  rpc CreateSource(Source) returns (Source) {};
  rpc GetSource(GetSourceRequest) returns (GetSourceResponse) {};
  rpc UpdateSource(UpdateSourceRequest) returns (Source) {};
  rpc DeleteSource(DeleteSourceRequest) returns (google.protobuf.Empty) {};
  rpc ListSources(ListSourcesRequest) returns(ListSourcesResponse) {};
};
